--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <link rel="icon" href="images/icon_x128.png" />
     <title>Whatsapp Reader</title>
+    <link rel="apple-touch-icon" href="images/icon_x128.png" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="icon" href="images/logo.svg" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      rel="stylesheet"
-    />
+    <meta name="theme-color" content="#009578" />
+    <link rel="manifest" href="manifest.json" />
+    <link rel="serviceWorker" href="sw.js" />
+    <script type="module" src="src/db.js"></script>
+    <script type="module" src="src/index.js"></script>
   </head>
 
   <body>
