--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <link rel="icon" href="images/icon_x144apple.png" />
+    <link rel="icon" href="images/icon_x144.png" />
     <title>Whatsapp Reader</title>
-    <link rel="apple-touch-icon" href="images/icon_x128apple.png" />
+    <link rel="apple-touch-icon" href="images/icon_x144apple.png" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="style.css" />
     <meta name="theme-color" content="#009578" />
